# NeuralNetworksInCUDA

./: CMakeLists.txt  LICENSE  NeuralNetwork.cpp  README.md  activition_functions.cuh  main.cu
include/: MatrixMultiplication.cuh  NeuralNetwork.h  Tensor.h  reduction_ops.h  scaler_ops.h  tensor_ops.h
